cluster/hadelandraas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beer
  namespace: hadelandraas
  labels:
    app: beer
spec:
  type: ClusterIP
  selector:
    app: beer
  ports:
    - name: http
      port: 80
      targetPort: http
